design-principles-02/src/main/java/com/farhad/example/design_principles02/parallel_inheritance_hierarchies/bad/Engineer.java
package com.farhad.example.design_principles02.parallel_inheritance_hierarchies.bad;

public interface Engineer {

	String getType();

	void setType(String typer);

	int getSalary();

	void setSalary(int salary);

	MileStone getMileStone();

	void setMileStone(MileStone mileStone);
}
